[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = ""
authors = ["nikola864 <kolyab89217115399@mail.ru>"]
readme = "README.md"
packages = [{include = "expense_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
pytest = "^9.0.2"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.45"
sqlalchemy-stubs = "^0.4"
asyncpg = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
